--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,10 @@
         <!-- If adding a new activity (like WebViewActivity), declare it here -->
         <activity android:name=".WebViewActivity" />
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyC8Ss9VOYnbwoWkVS_OAkDYLQIEg4FBwTE" />
+
     </application>
 
 </manifest>
